--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "processVideos": "node -r esm -r dotenv/config ./src/scripts/processVideos dotenv_config_path=.env.local"
-
-
-    
+    "processVideos": "node -r esm -r dotenv/config ./src/scripts/processVideos dotenv_config_path=.env.local",
+    "processAudios": "node -r esm -r dotenv/config ./src/scripts/processAudios dotenv_config_path=.env.local"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -65,7 +63,8 @@
     "superagent": "^6.1.0",
     "swr": "^1.1.1",
     "tailwindcss": "^3.1.4",
-    "tinify": "^1.6.1"
+    "tinify": "^1.6.1",
+    "wavesurfer.js": "^6.2.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
